--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start:prod": "node server.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,7 +32,8 @@
     "rxjs": "6.6.6",
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "typescript": "4.1.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1102.4",
