--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ng": "ng",
     "start:prod": "node server.js",
     "start": "node server.js",
-    "build": "ng build",
+    
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
