--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
     "zone.js": "0.11.4",
+    "express": "^4.17.1",
     "typescript": "4.1.5"
   },
   "devDependencies": {
